Made rough outline of report, and small changes to code.

--- a/Report/calculator_report.tex
+++ b/Report/calculator_report.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass{article}
 
 % Sections and chapters
 %\usepackage{blindtext}
@@ -14,7 +14,7 @@
 	urlcolor=black
 }
 
-% Cause C++ code
+% For C++ code
 \usepackage{listings}
 \usepackage{lstautogobble}	% For indentation in code (lstlisting)
 \usepackage{xcolor}
@@ -54,17 +54,53 @@
 
 \begin{document}
 	% Make title
-	\title{Introductory Assignment - Calculator}
+	\title{Introductory Assignment - C++ Calculator}
 	\date{\today}
 	\author{Paul Knutson}
 	\maketitle
+	\thispagestyle{empty}
 	\clearpage
+
 	\tableofcontents{}
 	\clearpage
 	
 	
-	\chapter{Assignment Description}
-	
-	% End of Chapter 1
+	\section{Introduction}
+		\subsection{Task description}
+			*Task description goes here*
+		% End of subsection 1
+		\subsection{Some other point}
+			*Point here?*
+		% End of subsection 2
+	% End of section 1
+	\\ \\
+	\section{Method}
+		\subsection{Methodologies}
+			*What methodologies I used to solve the problem*
+		% End of subsection 1
+		\subsection{Solution description}
+			*Brief/conceptual explenation of the solution, with diagrams (merge with above?)*
+		% End of subsection 2
+		\subsection{Code description}
+			*The code with description*
+		% End of subsection 3
+	% End of section 2
+	\\ \\
+	\section{Result}
+		\subsection{Functionality}
+			*What the program does/how it works (impersonal)*
+		% End of subsection 1
+		\subsection{Formatting}
+			*Formatting, error handling, rules/legality, etc.*
+		% End of subsection 1
+	% End of section 3
+	\\ \\
+	\section{Discussion}
+		*Comments on the project (nonimpersional-ish?)*
+	% End of section 4
 
+		
 \end{document}
+
+
+
